--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.1",
     "@chapanda/style-preset": "^1.4.3",
     "antd": "^5.21.5",
