--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -14,6 +14,7 @@
     "@ant-design/nextjs-registry": "^1.0.1",
     "@chapanda/style-preset": "^1.4.3",
     "antd": "^5.21.5",
+    "motion": "12.0.0-alpha.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
