--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -18,11 +18,13 @@
     "motion": "^12.0.0-alpha.2",
     "next": "^15.0.3",
     "react": "^19.0.0-rc-de68d2f4-20241204",
-    "react-dom": "^19.0.0-rc-de68d2f4-20241204"
+    "react-dom": "^19.0.0-rc-de68d2f4-20241204",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
     "@types/react": "^18.3.13",
+    "@types/swiper": "latest",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
