--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -11,28 +11,29 @@
     "update:deps": "npx taze major -w && pnpm run init"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.5.2",
-    "@chapanda/style-preset": "^1.4.6",
-    "@nextui-org/dropdown": "^2.3.7",
-    "@nextui-org/tooltip": "^2.2.5",
+    "@ant-design/icons": "^6.0.0",
+    "@chapanda/style-preset": "^1.4.9",
+    "@nextui-org/dropdown": "^2.3.9",
+    "@nextui-org/tooltip": "^2.2.7",
     "ahooks": "^3.8.4",
-    "motion": "^12.0.0-alpha.2",
-    "next": "^15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "swiper": "^11.1.15"
+    "motion": "^12.7.4",
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
-    "@types/node": "^20.17.10",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/swiper": "latest",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.25.1",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.3",
     "postcss-px-to-viewport": "^1.1.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "tailwindcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "typescript": "^5.8.3"
   }
 }
