--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -20,7 +20,8 @@
     "next": "^15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "dayjs": "^1.11.12"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
