feat: added contact page

--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -21,7 +21,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "swiper": "^11.2.6",
-    "dayjs": "^1.11.12"
+    "dayjs": "^1.11.12",
+    "@amap/amap-jsapi-loader": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
