--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -11,20 +11,22 @@
     "update:deps": "npx taze major -w && pnpm run init"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@ant-design/icons": "^6.0.0",
     "@chapanda/style-preset": "^1.4.9",
     "@nextui-org/dropdown": "^2.3.9",
     "@nextui-org/tooltip": "^2.2.7",
     "ahooks": "^3.8.4",
+    "dayjs": "^1.11.12",
     "motion": "^12.7.4",
     "next": "^15.3.1",
+    "next-intl": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "swiper": "^11.2.6",
-    "dayjs": "^1.11.12",
-    "@amap/amap-jsapi-loader": "^1.0.1"
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -35,7 +37,6 @@
     "postcss": "^8.5.3",
     "postcss-px-to-viewport": "^1.1.1",
     "tailwindcss": "^4.1.4",
-    "@tailwindcss/postcss": "^4.1.4",
     "typescript": "^5.8.3"
   }
 }
