--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -7,8 +7,10 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "update:deps": "npx taze major -w && pnpm run init"
+    "lint:ts-fix": "biome lint --write --max-diagnostics=100 ./ --config-path ./biome.json",
+    "format": "biome format --write ./ --config-path ./biome.json",
+    "update:deps": "npx taze major -w && pnpm run init",
+    "prepare": "npx simple-git-hooks"
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
@@ -37,6 +39,18 @@
     "postcss": "^8.5.3",
     "postcss-px-to-viewport": "^1.1.1",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "@biomejs/biome": "1.8.3",
+    "simple-git-hooks": "^2.8.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "biome lint --write --max-diagnostics=100 ./ --config-path ./biome.json",
+      "biome format --write ./ --config-path ./biome.json"
+    ]
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint-staged",
+    "commit-msg": "node vertify-commit.js"
   }
 }
