feat: middleware temp commit

--- a/panda-website/package.json
+++ b/panda-website/package.json
@@ -19,7 +19,7 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@chapanda/style-preset": "^1.4.9",
     "@heroui/button": "^2.2.19",
-    "@heroui/form": "^2.1.18.",
+    "@heroui/form": "^2.1.18",
     "@heroui/input": "^2.4.19",
     "@heroui/toast": "^2.0.9",
     "@heroui/tooltip": "^2.2.16",
@@ -39,7 +39,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@types/swiper": "latest",
+    "@types/swiper": "^6.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.25.1",
     "eslint-config-next": "15.0.3",
