--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   # 前端容器
-  chapanda-website-service:
+  chapanda-website:
     build:
       context: ./
       dockerfile: ./Dockerfile
